--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,1 @@
-asgiref==3.5.0
-backport==0.3.1
-backports.zoneinfo==0.2.1
-boto3==1.21.37
-botocore==1.24.37
-dj-database-url==0.5.0
-Django==3.2
-django-allauth==0.41.0
-django-storages==1.12.3
-gunicorn==20.1.0
-jmespath==1.0.0
-oauthlib==3.2.0
-Pillow==9.1.0
-python3-openid==3.2.0
-pytz==2022.1
-requests-oauthlib==1.3.1
-s3transfer==0.5.2
-sqlparse==0.4.2
+psycopg2==2.9.3
