--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,20 @@
 psycopg2==2.9.3
+asgiref==3.2.3
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==3.0.1
+django-allauth==0.41.0
+django-countries==6.0
+django-crispy-forms==1.8.1
+gunicorn==20.0.4
+idna==2.8
+oauthlib==3.1.0
+Pillow==7.0.0
+psycopg2-binary==2.8.5
+python3-openid==3.1.0
+pytz==2019.3
+requests==2.22.0
+requests-oauthlib==1.3.0
+sqlparse==0.3.0
+stripe==2.42.0
+urllib3==1.25.7
